--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2615,11 +2615,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dm_002dplayer.html#index-C_002d_0027-h"><code>C-'
+      "emacspeak_002dorg.html#index-C_002d_0027-h"><code>C-'
       h</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
+      "emacspeak_002dorg.html">emacspeak-org</a></td>
     </tr>
     <tr>
       <td></td>
@@ -2911,11 +2911,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dm_002dplayer.html#index-C_002d_002e-h"><code>C-.
+      "emacspeak_002dorg.html#index-C_002d_002e-h"><code>C-.
       h</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
+      "emacspeak_002dorg.html">emacspeak-org</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3106,11 +3106,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dorg.html#index-C_002d_003b-h"><code>C-;
+      "emacspeak_002dm_002dplayer.html#index-C_002d_003b-h"><code>C-;
       h</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dorg.html">emacspeak-org</a></td>
+      "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6452,11 +6452,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dorg.html#index-C_002dx-_0040-h-h"><code>C-x @
-      h h</code></a>:</td>
+      "emacspeak_002dm_002dplayer.html#index-C_002dx-_0040-h-h"><code>
+      C-x @ h h</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dorg.html">emacspeak-org</a></td>
+      "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6551,11 +6551,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dm_002dplayer.html#index-C_002dx-_0040-s-h"><code>
-      C-x @ s h</code></a>:</td>
+      "emacspeak_002dorg.html#index-C_002dx-_0040-s-h"><code>C-x @
+      s h</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
+      "emacspeak_002dorg.html">emacspeak-org</a></td>
     </tr>
     <tr>
       <td></td>
