--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -710,24 +710,21 @@ flat classical club dance full-bass full-bass-and-treble
       </div>
     </dd>
   </dl><span id=
-  "emacspeak_002dm_002dplayer_002dfrom_002dmedia_002dhistory"></span>
+  "emacspeak_002dm_002dplayer_002dfrom_002dhistory"></span>
   <h4 class="subsubsection">12.115.2.36
-  emacspeak-m-player-from-media-history</h4>
+  emacspeak-m-player-from-history</h4>
   <dl>
-    <dt id=
-    "index-emacspeak_002dm_002dplayer_002dfrom_002dmedia_002dhistory">
-    Command: <strong>emacspeak-m-player-from-media-history</strong>
+    <dt id="index-emacspeak_002dm_002dplayer_002dfrom_002dhistory">
+    Command: <strong>emacspeak-m-player-from-history</strong>
     <em>(posn)</em></dt>
     <dd>
       <dl compact="compact">
-        <dt><kbd>C-. h</kbd></dt>
-        <dd><span id="index-C_002d_002e-h"></span></dd>
-        <dt><kbd>C-' h</kbd></dt>
-        <dd><span id="index-C_002d_0027-h"></span></dd>
-        <dt><kbd>C-x @ s h</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-s-h"></span></dd>
+        <dt><kbd>C-; h</kbd></dt>
+        <dd><span id="index-C_002d_003b-h"></span></dd>
+        <dt><kbd>C-x @ h h</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-h-h"></span></dd>
       </dl><span id=
-      "index-emacspeak_002dm_002dplayer_002dfrom_002dmedia_002dhistory-1"></span>
+      "index-emacspeak_002dm_002dplayer_002dfrom_002dhistory-1"></span>
       <div class="format">
         <pre class=
         "format">Play media from position ‘posn’media-history. 
