--- a/manual/emacspeak_002dorg.html
+++ b/manual/emacspeak_002dorg.html
@@ -81,10 +81,12 @@
     open)</em></dt>
     <dd>
       <dl compact="compact">
-        <dt><kbd>C-; h</kbd></dt>
-        <dd><span id="index-C_002d_003b-h"></span></dd>
-        <dt><kbd>C-x @ h h</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-h-h"></span></dd>
+        <dt><kbd>C-. h</kbd></dt>
+        <dd><span id="index-C_002d_002e-h"></span></dd>
+        <dt><kbd>C-' h</kbd></dt>
+        <dd><span id="index-C_002d_0027-h"></span></dd>
+        <dt><kbd>C-x @ s h</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-s-h"></span></dd>
       </dl><span id=
       "index-emacspeak_002dorg_002dcapture_002dlink-1"></span>
       <div class="format">
