Summary: article update

--- a/announcements/contextual-context.html
+++ b/announcements/contextual-context.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-08-01 Sun 06:36 -->
+<!-- 2021-08-01 Sun 06:54 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Contextual Context Switching For An Efficient Workflow</title>
@@ -219,33 +219,58 @@
 <body>
 <div id="content">
 <h1 class="title">Contextual Context Switching For An Efficient Workflow</h1>
-<div id="outline-container-orgbf99606" class="outline-2">
-<h2 id="orgbf99606"><span class="section-number-2">1</span> Executive Summary</h2>
+<div id="outline-container-orgcae542f" class="outline-2">
+<h2 id="orgcae542f"><span class="section-number-2">1</span> Executive Summary</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Context switching in an Emacs workflow comes down to switching
 buffers &#x2014; and consequently, Emacs provides a large number of
-built-ins as well as extensions for <i>switching buffers</i>. One can put
-together numerous workflows by picking among these to make context
-switching <i>contextual</i> &#x2014; using the  most appropriate workflow
-strategy can lead to one being able to focus much better on the core
-task of creating, editting, reviewing and publishing all forms of
+built-ins and extensions packages for <i>switching buffers</i>. One can
+put together numerous workflows by picking among these to make
+context switching <i>contextual</i> &#x2014; using the most appropriate
+workflow can lead to  being able to focus much better on the core
+task of creating, editing, reviewing and publishing all forms of
 content.
 </p>
 
 <p>
-This article summarizes my present workflow strategy  &#x2014; it's
-optimized for an eyes-free workflow, and entirely keyboard
-driven. 
-completely 
+This article summarizes my present workflow &#x2014; it's entirely
+keyboard driven and optimized for
+an eyes-free workflow.
 </p>
+</div>
+</div>
+
+<div id="outline-container-org441e00e" class="outline-2">
+<h2 id="org441e00e"><span class="section-number-2">2</span> Where Does <i>Context</i> Come From?</h2>
+<div class="outline-text-2" id="text-2">
+<p>
+Context as used in this article can be traced back to the current task at
+hand &#x2014; here are some illustrative examples:
+</p>
+
+<ol class="org-ol">
+<li>Editing a set of related files.</li>
+<li>Switching among a collection of chat buffers.</li>
+<li>Switching among a collection of mail folders.</li>
+<li>Switching among a collection of open Web pages.</li>
+<li>Switching among a <i>small</i> number of recently used buffers.</li>
+</ol>
+
+
+
+
+
+<ol class="org-ol">
+<li>Current Task</li>
+</ol>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2021-08-01 Sun 00:00</p>
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2021-08-01 Sun 06:36</p>
+<p class="date">Created: 2021-08-01 Sun 06:54</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
