--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2579,6 +2579,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002d_0027-_002c"><code>C-'
+      ,</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002d_0027-_002e"><code>C-'
       .</code></a>:</td>
       <td>&nbsp;</td>
@@ -2785,15 +2794,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-C_002d_002c-n"><code>C-,
-      n</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002dfeeds.html#index-C_002d_002c-o"><code>C-,
       o</code></a>:</td>
       <td>&nbsp;</td>
@@ -2871,6 +2871,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dm_002dplayer.html">emacspeak-m-player</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002d_002e-_002c"><code>C-.
+      ,</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3129,6 +3138,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dlibrivox.html">emacspeak-librivox</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002d_003b-n"><code>C-;
+      n</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6291,15 +6309,6 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dwizards.html#index-C_002dx-_0040-a-n"><code>C-x
-      @ a n</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
       "emacspeak_002dfeeds.html#index-C_002dx-_0040-a-o"><code>C-x
       @ a o</code></a>:</td>
       <td>&nbsp;</td>
@@ -6479,6 +6488,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dx-_0040-h-n"><code>C-x
+      @ h n</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002dx-_0040-h-p"><code>C-x
       @ h p</code></a>:</td>
       <td>&nbsp;</td>
@@ -6508,6 +6526,15 @@
       <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002dx-_0040-h-w"><code>C-x
       @ h w</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dx-_0040-s-_002c"><code>
+      C-x @ s ,</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
