--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -901,10 +901,10 @@ updating custom settings for a specific package or group of packages.
       <dl compact="compact">
         <dt><kbd>C-z n</kbd></dt>
         <dd><span id="index-C_002dz-n"></span></dd>
-        <dt><kbd>C-, n</kbd></dt>
-        <dd><span id="index-C_002d_002c-n"></span></dd>
-        <dt><kbd>C-x @ a n</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-a-n"></span></dd>
+        <dt><kbd>C-; n</kbd></dt>
+        <dd><span id="index-C_002d_003b-n"></span></dd>
+        <dt><kbd>C-x @ h n</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-h-n"></span></dd>
       </dl><span id=
       "index-emacspeak_002dwizards_002dcycle_002dto_002dnext_002dbuffer-1"></span>
       <div class="format">
@@ -925,10 +925,10 @@ updating custom settings for a specific package or group of packages.
       <dl compact="compact">
         <dt><kbd>C-z p</kbd></dt>
         <dd><span id="index-C_002dz-p"></span></dd>
-        <dt><kbd>C-, p</kbd></dt>
-        <dd><span id="index-C_002d_002c-p"></span></dd>
-        <dt><kbd>C-x @ a p</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-a-p"></span></dd>
+        <dt><kbd>C-; p</kbd></dt>
+        <dd><span id="index-C_002d_003b-p"></span></dd>
+        <dt><kbd>C-x @ h p</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-h-p"></span></dd>
       </dl><span id=
       "index-emacspeak_002dwizards_002dcycle_002dto_002dprevious_002dbuffer-1"></span>
       <div class="format">
@@ -1864,10 +1864,10 @@ prompts for and sets value of the file local pattern.
     &amp;optional ask-pwd)</em></dt>
     <dd>
       <dl compact="compact">
-        <dt><kbd>C-; p</kbd></dt>
-        <dd><span id="index-C_002d_003b-p"></span></dd>
-        <dt><kbd>C-x @ h p</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-h-p"></span></dd>
+        <dt><kbd>C-, p</kbd></dt>
+        <dd><span id="index-C_002d_002c-p"></span></dd>
+        <dt><kbd>C-x @ a p</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-a-p"></span></dd>
       </dl><span id=
       "index-emacspeak_002dwizards_002dpdf_002dopen-1"></span>
       <div class="format">
@@ -2139,13 +2139,9 @@ of the source buffer.
     Command:
     <strong>emacspeak-wizards-shell-directory-set</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e x ,</kbd></dt>
-        <dd><span id="index-C_002de-x-_002c"></span></dd>
-        <dt><kbd>&lt;fn&gt; x ,</kbd></dt>
-        <dd><span id="index-_003cfn_003e-x-_002c"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dwizards_002dshell_002ddirectory_002dset-1"></span>
+      <span id=
+      "index-emacspeak_002dwizards_002dshell_002ddirectory_002dset-1">
+      </span>
       <div class="format">
         <pre class=
         "format">Define current directory as this shell’s project directory.
@@ -2165,11 +2161,21 @@ of the source buffer.
         <dd><span id="index-C_002de-_003cf11_003e"></span></dd>
         <dt><kbd>C-; C-j</kbd></dt>
         <dd><span id="index-C_002d_003b-C_002dj"></span></dd>
+        <dt><kbd>C-. ,</kbd></dt>
+        <dd><span id="index-C_002d_002e-_002c"></span></dd>
+        <dt><kbd>C-' ,</kbd></dt>
+        <dd><span id="index-C_002d_0027-_002c"></span></dd>
         <dt><kbd>&lt;fn&gt; &lt;f11&gt;</kbd></dt>
         <dd><span id=
         "index-_003cfn_003e-_003cf11_003e"></span></dd>
+        <dt><kbd>C-e x ,</kbd></dt>
+        <dd><span id="index-C_002de-x-_002c"></span></dd>
+        <dt><kbd>&lt;fn&gt; x ,</kbd></dt>
+        <dd><span id="index-_003cfn_003e-x-_002c"></span></dd>
         <dt><kbd>C-x @ h C-j</kbd></dt>
         <dd><span id="index-C_002dx-_0040-h-C_002dj"></span></dd>
+        <dt><kbd>C-x @ s ,</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-s-_002c"></span></dd>
       </dl><span id=
       "index-emacspeak_002dwizards_002dshell_002dtoggle-1"></span>
       <div class="format">
