--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -63,7 +63,7 @@
   <hr />
   <span id="URL-Templates-1"></span>
   <h3 class="section">12.234 URL Templates</h3>
-  <p>This section documents a total of 74 URL Templates.</p>
+  <p>This section documents a total of 73 URL Templates.</p>
   <p>All of these URL templates can be invoked via command <kbd>M-x
   emacspeak-url-template-fetch</kbd> normally bound to <kbd>C-e u
   &lt;fn&gt; u</kbd>. This command prompts for the name of the
@@ -160,13 +160,9 @@
       <p>Market data filtered from CNN Money</p>
     </li>
     <li>
-      <b>CNN PodCasts</b>
-      <p>List CNN Podcast media links.</p>
-    </li>
-    <li>
-      <b>Currency Converter</b>
-      <p>Currency Converter. Currencies can be a comma-separated
-      list of codes.</p>
+      <b>Cricinfo Print</b>
+      <p>Fetch printer friendly version for link under point on
+      Cricinfo</p>
     </li>
     <li>
       <b>Dictionary Lookup</b>
