--- a/manual/emacspeak_002dwe.html
+++ b/manual/emacspeak_002dwe.html
@@ -734,9 +734,13 @@ specifies the page to extract contents  from.
     Command: <strong>emacspeak-we-url-rewrite-and-follow</strong>
     <em>(&amp;optional prompt)</em></dt>
     <dd>
-      <span id=
-      "index-emacspeak_002dwe_002durl_002drewrite_002dand_002dfollow-1">
-      </span>
+      <dl compact="compact">
+        <dt><kbd>C-e x e ]</kbd></dt>
+        <dd><span id="index-C_002de-x-e-_005d"></span></dd>
+        <dt><kbd>&lt;fn&gt; x e ]</kbd></dt>
+        <dd><span id="index-_003cfn_003e-x-e-_005d"></span></dd>
+      </dl><span id=
+      "index-emacspeak_002dwe_002durl_002drewrite_002dand_002dfollow-1"></span>
       <div class="format">
         <pre class=
         "format">Apply a url rewrite rule as specified in the current buffer
@@ -923,7 +927,7 @@ from Web page – default is the current page being viewed.
   </dl><span id="emacspeak_002dwe-Options"></span>
   <h4 class="subsection">12.204.2 emacspeak-we Options</h4>
   <dl>
-    <dt id="index-User-Option-95">Variable: <strong>User
+    <dt id="index-User-Option-93">Variable: <strong>User
     Option</strong>
     <em>emacspeak-we-filters-rename-buffer</em></dt>
     <dd>
