--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -903,8 +903,13 @@ updating custom settings for a specific package or group of packages.
         <dd><span id="index-C_002dz-n"></span></dd>
         <dt><kbd>C-; n</kbd></dt>
         <dd><span id="index-C_002d_003b-n"></span></dd>
+        <dt><kbd>C-; C-.</kbd></dt>
+        <dd><span id="index-C_002d_003b-C_002d_002e"></span></dd>
         <dt><kbd>C-x @ h n</kbd></dt>
         <dd><span id="index-C_002dx-_0040-h-n"></span></dd>
+        <dt><kbd>C-x @ h C-.</kbd></dt>
+        <dd><span id=
+        "index-C_002dx-_0040-h-C_002d_002e"></span></dd>
       </dl><span id=
       "index-emacspeak_002dwizards_002dcycle_002dto_002dnext_002dbuffer-1"></span>
       <div class="format">
@@ -927,8 +932,13 @@ updating custom settings for a specific package or group of packages.
         <dd><span id="index-C_002dz-p"></span></dd>
         <dt><kbd>C-; p</kbd></dt>
         <dd><span id="index-C_002d_003b-p"></span></dd>
+        <dt><kbd>C-; C-,</kbd></dt>
+        <dd><span id="index-C_002d_003b-C_002d_002c"></span></dd>
         <dt><kbd>C-x @ h p</kbd></dt>
         <dd><span id="index-C_002dx-_0040-h-p"></span></dd>
+        <dt><kbd>C-x @ h C-,</kbd></dt>
+        <dd><span id=
+        "index-C_002dx-_0040-h-C_002d_002c"></span></dd>
       </dl><span id=
       "index-emacspeak_002dwizards_002dcycle_002dto_002dprevious_002dbuffer-1"></span>
       <div class="format">
@@ -2592,7 +2602,7 @@ the final or penultimate step during initialization.
   </dl><span id="emacspeak_002dwizards-Options"></span>
   <h4 class="subsection">12.210.2 emacspeak-wizards Options</h4>
   <dl>
-    <dt id="index-User-Option-97">Variable: <strong>User
+    <dt id="index-User-Option-95">Variable: <strong>User
     Option</strong> <em>emacspeak-iex-api-key</em></dt>
     <dd>
       <p>Web API key for IEX Finance access. See IEX Login Console
@@ -2601,7 +2611,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-98">Variable: <strong>User
+    <dt id="index-User-Option-96">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-telephone-directory</em></dt>
     <dd>
@@ -2610,7 +2620,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-99">Variable: <strong>User
+    <dt id="index-User-Option-97">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-alpha-vantage-api-key</em></dt>
     <dd>
@@ -2620,7 +2630,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-100">Variable: <strong>User
+    <dt id="index-User-Option-98">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-find-switches-widget</em></dt>
     <dd>
@@ -2628,7 +2638,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-101">Variable: <strong>User
+    <dt id="index-User-Option-99">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-pdf-to-text-options</em></dt>
     <dd>
@@ -2636,7 +2646,7 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-102">Variable: <strong>User
+    <dt id="index-User-Option-100">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-personal-portfolio</em></dt>
     <dd>
@@ -2647,14 +2657,14 @@ the final or penultimate step during initialization.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-103">Variable: <strong>User
+    <dt id="index-User-Option-101">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-project-shells</em></dt>
     <dd>
       <p>List of shell-name/initial-directory pairs.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-104">Variable: <strong>User
+    <dt id="index-User-Option-102">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-remote-workstation</em></dt>
     <dd>
