--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -2301,6 +2301,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwe.html#index-_003cfn_003e-x-e-_005d"><code>&lt;fn&gt;
+      x e ]</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwe.html">emacspeak-we</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-_003cfn_003e-x-f"><code>&lt;fn&gt;
       x f</code></a>:</td>
       <td>&nbsp;</td>
@@ -3081,6 +3090,24 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002d_003b-C_002d_002c"><code>
+      C-; C-,</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002d_003b-C_002d_002e"><code>
+      C-; C-.</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002d_003b-C_002da"><code>C-;
       C-a</code></a>:</td>
       <td>&nbsp;</td>
@@ -3165,15 +3192,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "extra_002dmuggles.html#index-C_002d_003b-v"><code>C-;
-      v</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -5988,6 +6006,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwe.html#index-C_002de-x-e-_005d"><code>C-e x e
+      ]</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwe.html">emacspeak-we</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002de-x-f"><code>C-e x
       f</code></a>:</td>
       <td>&nbsp;</td>
@@ -6426,6 +6453,24 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dx-_0040-h-C_002d_002c">
+      <code>C-x @ h C-,</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html#index-C_002dx-_0040-h-C_002d_002e">
+      <code>C-x @ h C-.</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002dx-_0040-h-C_002da"><code>
       C-x @ h C-a</code></a>:</td>
       <td>&nbsp;</td>
@@ -6511,15 +6556,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "extra_002dmuggles.html#index-C_002dx-_0040-h-v"><code>C-x @
-      h v</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
