--- a/manual/URL-Templates.html
+++ b/manual/URL-Templates.html
@@ -161,8 +161,7 @@
     </li>
     <li>
       <b>Cricinfo Print</b>
-      <p>Fetch printer friendly version for link under point on
-      Cricinfo</p>
+      <p>Printer friendly link on Cricinfo</p>
     </li>
     <li>
       <b>Dictionary Lookup</b>
