--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -1645,11 +1645,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dtapestry.html#index-_003cfn_003e-M_002dt"><code>
-      &lt;fn&gt; M-t</code></a>:</td>
+      "emacspeak_002dspeak.html#index-_003cfn_003e-M_002dt"><code>&lt;fn&gt;
+      M-t</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dtapestry.html">emacspeak-tapestry</a></td>
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -1824,8 +1824,8 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cfn_003e-w"><code>&lt;fn&gt;
-      w</code></a>:</td>
+      "emacspeak_002dspeak.html#index-_003cfn_003e-W"><code>&lt;fn&gt;
+      W</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
@@ -1833,11 +1833,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dtapestry.html#index-_003cfn_003e-W"><code>&lt;fn&gt;
-      W</code></a>:</td>
+      "emacspeak_002dspeak.html#index-_003cfn_003e-w"><code>&lt;fn&gt;
+      w</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dtapestry.html">emacspeak-tapestry</a></td>
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -5263,11 +5263,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dtapestry.html#index-C_002de-M_002dt"><code>C-e
+      "emacspeak_002dspeak.html#index-C_002de-M_002dt"><code>C-e
       M-t</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dtapestry.html">emacspeak-tapestry</a></td>
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -5529,8 +5529,8 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002de-w-1"><code>C-e
-      w</code></a>:</td>
+      "emacspeak_002dspeak.html#index-C_002de-W"><code>C-e
+      W</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
@@ -5538,11 +5538,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dtapestry.html#index-C_002de-W"><code>C-e
-      W</code></a>:</td>
+      "emacspeak_002dspeak.html#index-C_002de-w-1"><code>C-e
+      w</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dtapestry.html">emacspeak-tapestry</a></td>
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
