--- a/manual/emacspeak_002dtabulate.html
+++ b/manual/emacspeak_002dtabulate.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dtapestry.html" rel="next" title=
-  "emacspeak-tapestry" />
+  <link href="emacspeak_002dtar.html" rel="next" title=
+  "emacspeak-tar" />
   <link href="emacspeak_002dtable_002dui.html" rel="prev" title=
   "emacspeak-table-ui" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002dtabulate"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002dtapestry.html" accesskey="n"
-    rel="next">emacspeak-tapestry</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002dtar.html" accesskey="n" rel=
+    "next">emacspeak-tar</a>, Previous: <a href=
     "emacspeak_002dtable_002dui.html" accesskey="p" rel=
     "prev">emacspeak-table-ui</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
