--- a/manual/emacspeak_002dtar.html
+++ b/manual/emacspeak_002dtar.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002dtcl.html" rel="next" title=
   "emacspeak-tcl" />
-  <link href="emacspeak_002dtapestry.html" rel="prev" title=
-  "emacspeak-tapestry" />
+  <link href="emacspeak_002dtabulate.html" rel="prev" title=
+  "emacspeak-tabulate" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002dtcl.html" accesskey="n" rel=
     "next">emacspeak-tcl</a>, Previous: <a href=
-    "emacspeak_002dtapestry.html" accesskey="p" rel=
-    "prev">emacspeak-tapestry</a>, Up: <a href=
+    "emacspeak_002dtabulate.html" accesskey="p" rel=
+    "prev">emacspeak-tabulate</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,13 +65,13 @@
   </div>
   <hr />
   <span id="emacspeak_002dtar-1"></span>
-  <h3 class="section">12.185 emacspeak-tar</h3>
+  <h3 class="section">12.184 emacspeak-tar</h3>
   <p>Auditory interface to tar mode</p><span id=
   "Emacspeak_002dTar-Commands"></span>
-  <h4 class="subsection">12.185.1 Emacspeak-Tar
+  <h4 class="subsection">12.184.1 Emacspeak-Tar
   Commands</h4><span id=
   "emacspeak_002dtar_002dspeak_002dfile_002ddate"></span>
-  <h4 class="subsubsection">12.185.1.1
+  <h4 class="subsubsection">12.184.1.1
   emacspeak-tar-speak-file-date</h4>
   <dl>
     <dt id="index-emacspeak_002dtar_002dspeak_002dfile_002ddate">
@@ -86,7 +86,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dtar_002dspeak_002dfile_002dpermissions"></span>
-  <h4 class="subsubsection">12.185.1.2
+  <h4 class="subsubsection">12.184.1.2
   emacspeak-tar-speak-file-permissions</h4>
   <dl>
     <dt id=
@@ -105,7 +105,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dtar_002dspeak_002dfile_002dsize"></span>
-  <h4 class="subsubsection">12.185.1.3
+  <h4 class="subsubsection">12.184.1.3
   emacspeak-tar-speak-file-size</h4>
   <dl>
     <dt id="index-emacspeak_002dtar_002dspeak_002dfile_002dsize">
