--- a/manual/gmaps.html
+++ b/manual/gmaps.html
@@ -61,12 +61,12 @@
   </div>
   <hr />
   <span id="gmaps-1"></span>
-  <h3 class="section">12.221 gmaps</h3>
+  <h3 class="section">12.220 gmaps</h3>
   <p>Implements the Google Maps API</p><span id=
   "Gmaps-Commands"></span>
-  <h4 class="subsection">12.221.1 Gmaps Commands</h4><span id=
+  <h4 class="subsection">12.220.1 Gmaps Commands</h4><span id=
   "gmaps-2"></span>
-  <h4 class="subsubsection">12.221.1.1 gmaps</h4>
+  <h4 class="subsubsection">12.220.1.1 gmaps</h4>
   <dl>
     <dt id="index-gmaps">Command: <strong>gmaps</strong></dt>
     <dd>
@@ -77,17 +77,16 @@
         <dd><span id="index-C_002dx-_0040-h-e"></span></dd>
       </dl><span id="index-gmaps-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-gmaps’.
+        <pre class="format">Google Maps Interaction.
 
-Google Maps Interaction.
+This function has :around advice: ‘ad-Advice-gmaps’.
 
 (fn)
 </pre>
       </div>
     </dd>
   </dl><span id="gmaps_002dbicycling_002ddirections"></span>
-  <h4 class="subsubsection">12.221.1.2
+  <h4 class="subsubsection">12.220.1.2
   gmaps-bicycling-directions</h4>
   <dl>
     <dt id="index-gmaps_002dbicycling_002ddirections">Command:
@@ -96,17 +95,16 @@ Google Maps Interaction.
     <dd>
       <span id="index-gmaps_002dbicycling_002ddirections-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-gmaps-bicycling-directions’.
+        <pre class="format">Biking directions from Google Maps.
 
-Biking directions from Google Maps.
+This function has :around advice: ‘ad-Advice-gmaps-bicycling-directions’.
 
 (fn ORIGIN DESTINATION)
 </pre>
       </div>
     </dd>
   </dl><span id="gmaps_002ddirections"></span>
-  <h4 class="subsubsection">12.221.1.3 gmaps-directions</h4>
+  <h4 class="subsubsection">12.220.1.3 gmaps-directions</h4>
   <dl>
     <dt id="index-gmaps_002ddirections">Command:
     <strong>gmaps-directions</strong> <em>(origin destination
@@ -122,7 +120,7 @@ Biking directions from Google Maps.
       </div>
     </dd>
   </dl><span id="gmaps_002ddriving_002ddirections"></span>
-  <h4 class="subsubsection">12.221.1.4
+  <h4 class="subsubsection">12.220.1.4
   gmaps-driving-directions</h4>
   <dl>
     <dt id="index-gmaps_002ddriving_002ddirections">Command:
@@ -131,17 +129,16 @@ Biking directions from Google Maps.
     <dd>
       <span id="index-gmaps_002ddriving_002ddirections-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-gmaps-driving-directions’.
+        <pre class="format">Driving directions from Google Maps.
 
-Driving directions from Google Maps.
+This function has :around advice: ‘ad-Advice-gmaps-driving-directions’.
 
 (fn ORIGIN DESTINATION)
 </pre>
       </div>
     </dd>
   </dl><span id="gmaps_002dlocations_002dload"></span>
-  <h4 class="subsubsection">12.221.1.5 gmaps-locations-load</h4>
+  <h4 class="subsubsection">12.220.1.5 gmaps-locations-load</h4>
   <dl>
     <dt id="index-gmaps_002dlocations_002dload">Command:
     <strong>gmaps-locations-load</strong></dt>
@@ -153,7 +150,7 @@ Driving directions from Google Maps.
       </div>
     </dd>
   </dl><span id="gmaps_002dlocations_002dsave"></span>
-  <h4 class="subsubsection">12.221.1.6 gmaps-locations-save</h4>
+  <h4 class="subsubsection">12.220.1.6 gmaps-locations-save</h4>
   <dl>
     <dt id="index-gmaps_002dlocations_002dsave">Command:
     <strong>gmaps-locations-save</strong></dt>
@@ -165,7 +162,7 @@ Driving directions from Google Maps.
       </div>
     </dd>
   </dl><span id="gmaps_002dmode"></span>
-  <h4 class="subsubsection">12.221.1.7 gmaps-mode</h4>
+  <h4 class="subsubsection">12.220.1.7 gmaps-mode</h4>
   <dl>
     <dt id="index-gmaps_002dmode">Command:
     <strong>gmaps-mode</strong></dt>
@@ -203,25 +200,24 @@ M-i             backward-button
       </div>
     </dd>
   </dl><span id="gmaps_002dplace_002ddetails"></span>
-  <h4 class="subsubsection">12.221.1.8 gmaps-place-details</h4>
+  <h4 class="subsubsection">12.220.1.8 gmaps-place-details</h4>
   <dl>
     <dt id="index-gmaps_002dplace_002ddetails">Command:
     <strong>gmaps-place-details</strong></dt>
     <dd>
       <span id="index-gmaps_002dplace_002ddetails-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-gmaps-place-details’.
-
-Display details for place at point.
+        <pre class="format">Display details for place at point.
 Insert reviews if already displaying details.
+
+This function has :around advice: ‘ad-Advice-gmaps-place-details’.
 
 (fn)
 </pre>
       </div>
     </dd>
   </dl><span id="gmaps_002dplace_002dreviews"></span>
-  <h4 class="subsubsection">12.221.1.9 gmaps-place-reviews</h4>
+  <h4 class="subsubsection">12.220.1.9 gmaps-place-reviews</h4>
   <dl>
     <dt id="index-gmaps_002dplace_002dreviews">Command:
     <strong>gmaps-place-reviews</strong></dt>
@@ -234,7 +230,7 @@ Place details need to have been expanded first.
       </div>
     </dd>
   </dl><span id="gmaps_002dplaces_002dnearby"></span>
-  <h4 class="subsubsection">12.221.1.10 gmaps-places-nearby</h4>
+  <h4 class="subsubsection">12.220.1.10 gmaps-places-nearby</h4>
   <dl>
     <dt id="index-gmaps_002dplaces_002dnearby">Command:
     <strong>gmaps-places-nearby</strong> <em>(&amp;optional
@@ -242,18 +238,17 @@ Place details need to have been expanded first.
     <dd>
       <span id="index-gmaps_002dplaces_002dnearby-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-gmaps-places-nearby’.
-
-Find places near current location.
+        <pre class="format">Find places near current location.
 Uses default radius. optional interactive prefix arg clears any active filters.
+
+This function has :around advice: ‘ad-Advice-gmaps-places-nearby’.
 
 (fn &amp;optional CLEAR-FILTER)
 </pre>
       </div>
     </dd>
   </dl><span id="gmaps_002dplaces_002dsearch"></span>
-  <h4 class="subsubsection">12.221.1.11 gmaps-places-search</h4>
+  <h4 class="subsubsection">12.220.1.11 gmaps-places-search</h4>
   <dl>
     <dt id="index-gmaps_002dplaces_002dsearch">Command:
     <strong>gmaps-places-search</strong> <em>(query &amp;optional
@@ -261,19 +256,18 @@ Uses default radius. optional interactive prefix arg clears any active filters.
     <dd>
       <span id="index-gmaps_002dplaces_002dsearch-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-gmaps-places-search’.
-
-Perform a places search.
+        <pre class="format">Perform a places search.
 Use this only if you dont know the locality  of the place you’re looking for.
 Optional  prefix arg clears any active filters.
+
+This function has :around advice: ‘ad-Advice-gmaps-places-search’.
 
 (fn QUERY &amp;optional CLEAR-FILTER)
 </pre>
       </div>
     </dd>
   </dl><span id="gmaps_002dset_002dcurrent_002dfilter"></span>
-  <h4 class="subsubsection">12.221.1.12
+  <h4 class="subsubsection">12.220.1.12
   gmaps-set-current-filter</h4>
   <dl>
     <dt id="index-gmaps_002dset_002dcurrent_002dfilter">Command:
@@ -291,7 +285,7 @@ Optional interactive prefix arg prompts for all filter fields.
       </div>
     </dd>
   </dl><span id="gmaps_002dset_002dcurrent_002dlocation"></span>
-  <h4 class="subsubsection">12.221.1.13
+  <h4 class="subsubsection">12.220.1.13
   gmaps-set-current-location</h4>
   <dl>
     <dt id="index-gmaps_002dset_002dcurrent_002dlocation">Command:
@@ -301,17 +295,16 @@ Optional interactive prefix arg prompts for all filter fields.
       <span id=
       "index-gmaps_002dset_002dcurrent_002dlocation-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-gmaps-set-current-location’.
+        <pre class="format"> Set current location.
 
- Set current location.
+This function has :around advice: ‘ad-Advice-gmaps-set-current-location’.
 
 (fn ADDRESS)
 </pre>
       </div>
     </dd>
   </dl><span id="gmaps_002dset_002dcurrent_002dradius"></span>
-  <h4 class="subsubsection">12.221.1.14
+  <h4 class="subsubsection">12.220.1.14
   gmaps-set-current-radius</h4>
   <dl>
     <dt id="index-gmaps_002dset_002dcurrent_002dradius">Command:
@@ -321,17 +314,16 @@ Optional interactive prefix arg prompts for all filter fields.
       <span id=
       "index-gmaps_002dset_002dcurrent_002dradius-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-gmaps-set-current-radius’.
+        <pre class="format">Set current radius
 
-Set current radius
+This function has :around advice: ‘ad-Advice-gmaps-set-current-radius’.
 
 (fn RADIUS)
 </pre>
       </div>
     </dd>
   </dl><span id="gmaps_002dtransit_002ddirections"></span>
-  <h4 class="subsubsection">12.221.1.15
+  <h4 class="subsubsection">12.220.1.15
   gmaps-transit-directions</h4>
   <dl>
     <dt id="index-gmaps_002dtransit_002ddirections">Command:
@@ -340,17 +332,16 @@ Set current radius
     <dd>
       <span id="index-gmaps_002dtransit_002ddirections-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-gmaps-transit-directions’.
+        <pre class="format">Transit directions from Google Maps.
 
-Transit directions from Google Maps.
+This function has :around advice: ‘ad-Advice-gmaps-transit-directions’.
 
 (fn ORIGIN DESTINATION)
 </pre>
       </div>
     </dd>
   </dl><span id="gmaps_002dwalking_002ddirections"></span>
-  <h4 class="subsubsection">12.221.1.16
+  <h4 class="subsubsection">12.220.1.16
   gmaps-walking-directions</h4>
   <dl>
     <dt id="index-gmaps_002dwalking_002ddirections">Command:
@@ -359,17 +350,16 @@ Transit directions from Google Maps.
     <dd>
       <span id="index-gmaps_002dwalking_002ddirections-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-gmaps-walking-directions’.
+        <pre class="format">Walking directions from Google Maps.
 
-Walking directions from Google Maps.
+This function has :around advice: ‘ad-Advice-gmaps-walking-directions’.
 
 (fn ORIGIN DESTINATION)
 </pre>
       </div>
     </dd>
   </dl><span id="gmaps-Options"></span>
-  <h4 class="subsection">12.221.2 gmaps Options</h4>
+  <h4 class="subsection">12.220.2 gmaps Options</h4>
   <dl>
     <dt id="index-User-Option-109">Variable: <strong>User
     Option</strong> <em>gmaps-api-key</em></dt>
