--- a/manual/sox.html
+++ b/manual/sox.html
@@ -61,7 +61,7 @@
   </div>
   <hr />
   <span id="sox-1"></span>
-  <h3 class="section">12.227 sox</h3>
+  <h3 class="section">12.226 sox</h3>
   <p>This module defines a convenient speech-enabled interface for
   editing mp3 and wav files using SoX.</p>
   <p>Launching M-x sox creates a special interaction buffer that
@@ -74,9 +74,9 @@
   new build of Sox; The stock SoX that is package for Debian/Ubuntu
   does not always work. This module can be used independent of
   Emacspeak.</p><span id="Sox-Commands"></span>
-  <h4 class="subsection">12.227.1 Sox Commands</h4><span id=
+  <h4 class="subsection">12.226.1 Sox Commands</h4><span id=
   "sox_002dadd_002deffect"></span>
-  <h4 class="subsubsection">12.227.1.1 sox-add-effect</h4>
+  <h4 class="subsubsection">12.226.1.1 sox-add-effect</h4>
   <dl>
     <dt id="index-sox_002dadd_002deffect">Command:
     <strong>sox-add-effect</strong> <em>(name)</em></dt>
@@ -92,7 +92,7 @@
     </dd>
   </dl><span id=
   "sox_002ddelete_002deffect_002dat_002dpoint"></span>
-  <h4 class="subsubsection">12.227.1.2
+  <h4 class="subsubsection">12.226.1.2
   sox-delete-effect-at-point</h4>
   <dl>
     <dt id="index-sox_002ddelete_002deffect_002dat_002dpoint">
@@ -101,17 +101,16 @@
       <span id=
       "index-sox_002ddelete_002deffect_002dat_002dpoint-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-sox-delete-effect-at-point’.
+        <pre class="format">Delete effect at point.
 
-Delete effect at point.
+This function has :around advice: ‘ad-Advice-sox-delete-effect-at-point’.
 
 (fn)
 </pre>
       </div>
     </dd>
   </dl><span id="sox_002dedit_002deffect_002dat_002dpoint"></span>
-  <h4 class="subsubsection">12.227.1.3
+  <h4 class="subsubsection">12.226.1.3
   sox-edit-effect-at-point</h4>
   <dl>
     <dt id="index-sox_002dedit_002deffect_002dat_002dpoint">
@@ -125,7 +124,7 @@ Delete effect at point.
       </div>
     </dd>
   </dl><span id="sox_002dmode"></span>
-  <h4 class="subsubsection">12.227.1.4 sox-mode</h4>
+  <h4 class="subsubsection">12.226.1.4 sox-mode</h4>
   <dl>
     <dt id="index-sox_002dmode">Command:
     <strong>sox-mode</strong></dt>
@@ -146,7 +145,7 @@ key             binding
       </div>
     </dd>
   </dl><span id="sox_002dopen_002dfile"></span>
-  <h4 class="subsubsection">12.227.1.5 sox-open-file</h4>
+  <h4 class="subsubsection">12.226.1.5 sox-open-file</h4>
   <dl>
     <dt id="index-sox_002dopen_002dfile">Command:
     <strong>sox-open-file</strong> <em>(snd-file)</em></dt>
@@ -154,16 +153,16 @@ key             binding
       <span id="index-sox_002dopen_002dfile-1"></span>
       <div class="format">
         <pre class=
-        "format">This function has :around advice: ‘ad-Advice-sox-open-file’.
+        "format">Open specified snd-file on the Audio Workbench.
 
-Open specified snd-file on the Audio Workbench.
+This function has :around advice: ‘ad-Advice-sox-open-file’.
 
 (fn SND-FILE)
 </pre>
       </div>
     </dd>
   </dl><span id="sox_002dplay"></span>
-  <h4 class="subsubsection">12.227.1.6 sox-play</h4>
+  <h4 class="subsubsection">12.226.1.6 sox-play</h4>
   <dl>
     <dt id="index-sox_002dplay">Command:
     <strong>sox-play</strong></dt>
@@ -175,24 +174,23 @@ Open specified snd-file on the Audio Workbench.
       </div>
     </dd>
   </dl><span id="sox_002drefresh"></span>
-  <h4 class="subsubsection">12.227.1.7 sox-refresh</h4>
+  <h4 class="subsubsection">12.226.1.7 sox-refresh</h4>
   <dl>
     <dt id="index-sox_002drefresh">Command:
     <strong>sox-refresh</strong></dt>
     <dd>
       <span id="index-sox_002drefresh-1"></span>
       <div class="format">
-        <pre class=
-        "format">This function has :around advice: ‘ad-Advice-sox-refresh’.
+        <pre class="format">Redraw Audio Workbench.
 
-Redraw Audio Workbench.
+This function has :around advice: ‘ad-Advice-sox-refresh’.
 
 (fn)
 </pre>
       </div>
     </dd>
   </dl><span id="sox_002dsave"></span>
-  <h4 class="subsubsection">12.227.1.8 sox-save</h4>
+  <h4 class="subsubsection">12.226.1.8 sox-save</h4>
   <dl>
     <dt id="index-sox_002dsave">Command: <strong>sox-save</strong>
     <em>(save-file)</em></dt>
@@ -206,7 +204,7 @@ Redraw Audio Workbench.
       </div>
     </dd>
   </dl><span id="sox_002dset_002deffect"></span>
-  <h4 class="subsubsection">12.227.1.9 sox-set-effect</h4>
+  <h4 class="subsubsection">12.226.1.9 sox-set-effect</h4>
   <dl>
     <dt id="index-sox_002dset_002deffect">Command:
     <strong>sox-set-effect</strong> <em>(name)</em></dt>
@@ -220,7 +218,7 @@ Redraw Audio Workbench.
       </div>
     </dd>
   </dl><span id="sox_002dshow_002dtimestamp"></span>
-  <h4 class="subsubsection">12.227.1.10 sox-show-timestamp</h4>
+  <h4 class="subsubsection">12.226.1.10 sox-show-timestamp</h4>
   <dl>
     <dt id="index-sox_002dshow_002dtimestamp">Command:
     <strong>sox-show-timestamp</strong></dt>
@@ -232,7 +230,7 @@ Redraw Audio Workbench.
       </div>
     </dd>
   </dl><span id="sox_002dstop"></span>
-  <h4 class="subsubsection">12.227.1.11 sox-stop</h4>
+  <h4 class="subsubsection">12.226.1.11 sox-stop</h4>
   <dl>
     <dt id="index-sox_002dstop">Command:
     <strong>sox-stop</strong></dt>
