--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1565,8 +1565,7 @@ This will work if the soundcard is set to 48000.
       <span id=
       "index-emacspeak_002dm_002dplayer_002dwrite_002dclip-1"></span>
       <div class="format">
-        <pre class=
-        "format">Invoke mp3splt to clip selected range in current file.
+        <pre class="format">Split selected range using SoX
 </pre>
       </div>
     </dd>
